[package]
name = "larc-api-keys"
version = "0.1.0"
edition = "2024"
description = "L-ARC API Key Service — secure API key management for the Light Architects platform"
authors = ["KFT <kft@lightarchitects.io>"]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Crypto — HMAC-SHA256 for key hashing (NOT argon2 — keys have sufficient entropy)
hmac = "0.12"
sha2 = "0.10"
ring = "0.17"

# JWT
jsonwebtoken = "9"

# Key generation
rand = "0.8"
base62 = "2"
crc32fast = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# Secret handling — zeroize on drop, redacted Debug
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client (webhooks)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# URL parsing (webhook validation)
url = "2"

# Error handling
thiserror = "2"
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true

[lints.clippy]
pedantic = { level = "deny" }
