[package]
name = "larc-keys"
version = "0.1.0"
edition = "2024"
description = "API key management service for the Light Architects platform — Axum + SQLite + JWT with three-tier auth, verse-derived keys, and webhook event notifications"
authors = ["Kevin Francis Tan <kevinfrancis.tan@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/TheLightArchitects/larc-keys"
homepage = "https://github.com/theLightArchitect/lightarchitects-platform"
keywords = ["api-key", "auth", "axum", "jwt", "mcp"]
categories = ["authentication", "web-programming::http-server"]
readme = "README.md"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Crypto — HMAC-SHA256 for key hashing, HKDF for verse-based key derivation
hmac = "0.12"
sha2 = "0.10"
hkdf = "0.12"
ring = "0.17"

# JWT
jsonwebtoken = "9"

# Password hashing — Argon2id for admin user passwords in `users.password_hash`
argon2 = "0.5"

# Interactive password prompt for the `create-admin` CLI subcommand
rpassword = "7"

# Key generation
rand = "0.8"
base62 = "2"
crc32fast = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# Secret handling — zeroize on drop, redacted Debug
secrecy = { version = "0.10", features = ["serde"] }
subtle = "2"
zeroize = { version = "1", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client (webhooks)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# URL parsing (webhook validation)
url = "2"

# Error handling
thiserror = "2"
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true

[lints.clippy]
pedantic = { level = "deny" }
